<resources>
    <!--Main activity resources-->
    <string name="app_name">Stock Market Search</string>
    <string name="action_settings">Settings</string>
    <string name="quote_name">Get Quote</string>
    <string name="clear_name">Clear</string>
    <string name="favorite_name">Favorites</string>
    <string name="autorefresh_name">AutoRefresh</string>
    <string name="sort_name">Sort by</string>
    <string name="order_name">Order</string>
    <!--Stock Details resources-->
    <string name="current_name">CURRENT</string>
    <string name="historical_name">HISTORICAL</string>
    <string name="news_name">NEWS</string>
    <string name="stockdetails_name">Stock Details</string>
    <string name="dummy_name">DUMMY</string>
    <string name="title_activity_stock_details">StockDetailsActivity</string>
    <string name="indictaor_name">Indicators</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string><!--For error cases-->

    <!--Error msg string-->
    <string name="error_message">Failed to load data.</string>

</resources>
