<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/restaurant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/stocktitle_textview"
        android:layout_marginTop="@dimen/fab_margin"
        android:textSize="@dimen/stock_title_size"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/app_name"/>
    <AutoCompleteTextView
        android:id="@+id/stock_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/quote_textview"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/quote_button_margin"
            android:textSize="@dimen/quote_button_size"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/quote_name"/>
        <TextView
            android:id="@+id/clear_textview"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/quote_buttons_gap"
            android:textSize="@dimen/quote_button_size"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="right"
            android:text="@string/clear_name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/favoritequote_textview"
            android:layout_marginTop="@dimen/quote_button_size"
            android:layout_marginLeft="@dimen/favorites_margin"
            android:textSize="@dimen/quote_button_size"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/favorite_name"/>
        <Switch
            android:id="@+id/autorefresh_switch"
            android:layout_marginTop="@dimen/quote_button_size"
            android:layout_marginLeft="@dimen/quote_buttons_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autorefresh_name"
            android:textColor="@color/white"/>
        <ImageButton
            android:layout_marginTop="@dimen/quote_button_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_button"
            android:background="@android:color/transparent"
            android:tint="@color/white"
            android:src="@drawable/ic_autorenew_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Spinner
        android:id="@+id/sort_field_spinner"
        android:layout_marginTop="@dimen/quote_button_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/sort_name" />
        <Spinner
            android:id="@+id/sort_order_spinner"
            android:layout_marginTop="@dimen/quote_button_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:prompt="@string/order_name" />
    </LinearLayout>
    <ProgressBar
        android:maxWidth="@dimen/progressbar_size"
        android:minWidth="@dimen/progressbar_size"
        android:minHeight="@dimen/progressbar_size"
        android:maxHeight="@dimen/progressbar_size"
        android:layout_gravity="center"
        android:id="@+id/main_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>
    <TextView
        android:id="@+id/main_error_textview"
        android:layout_marginTop="@dimen/quote_button_size"
        android:layout_marginLeft="@dimen/favorites_margin"
        android:textSize="@dimen/quote_button_size"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/error_message"/>
    <ListView
        android:id="@+id/favoritequote_listview"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@color/white"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>